<resources>
    <string name="app_name">PerFit</string>
    <string name="fitness">Fitness</string>
    <string name="history">History</string>
    <string name="select">SELECT</string>
    <string name="start">START</string>
    <string name="choose">Choose</string>
    <string name="select_mode">Select Your Action</string>
    <string name="upload_video">Upload Video By</string>
    <string name="or">Or</string>
    <string name="record">Record</string>
    <string name="max_length_supported">(Maximum video length supported is 5 seconds)</string>
    <string name="loading">Processing your video</string>
    <string name="correctness_score_header">Overall Correctness</string>
    <string name="correctness_score">100</string>
    <string name="motion_feedback">Motion Feedback</string>
    <string name="action">Action:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="description">Description:</string>
    <string name="view_demo">View Demo</string>
    <string name="view_video">View Video</string>
    <string name="date">Date:</string>
    <string name="score">Overall Score:</string>
    <string name="subscores">Subscores:</string>
    <string name="areas_of_weakness">Your Areas of Weakness are</string>
</resources>