<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.perfit.viewModels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.fragments.NewFitnessFragment">

        <Button
            android:id="@+id/button_mode_selection"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:text="@string/select"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mode_selection" />

        <Button
            android:id="@+id/button_start_recording"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/record"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/text_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_upload_video"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginBottom="12dp"
            android:text="@string/choose"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/text_max_length"
            app:layout_constraintEnd_toEndOf="@+id/button_start_recording"
            app:layout_constraintStart_toStartOf="@+id/button_start_recording" />

        <TextView
            android:id="@+id/text_mode_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:text="@string/select_mode"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_selected_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/button_mode_selection"
            app:layout_constraintStart_toStartOf="@+id/button_mode_selection"
            app:layout_constraintTop_toBottomOf="@+id/button_mode_selection" />

        <TextView
            android:id="@+id/text_then"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/upload_video"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_start_recording"
            app:layout_constraintEnd_toEndOf="@+id/button_start_recording"
            app:layout_constraintStart_toStartOf="@+id/button_start_recording" />

        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/or"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_upload_video"
            app:layout_constraintEnd_toEndOf="@+id/button_start_recording"
            app:layout_constraintStart_toStartOf="@+id/button_start_recording" />

        <TextView
            android:id="@+id/text_max_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/max_length_supported"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_upload_video"
            app:layout_constraintStart_toStartOf="@+id/button_start_recording" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>